(Mod) personal info from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
                 </h2>
                 <ul>
                     <li><a href="https://github.com/lara-vel-dev">Github</a></li>
-                    <li><a href="https://linkedin.com/in/lara-ve-dev">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/lara-vel-dev">LinkedIn</a></li>
                     <li><a href="https://twitter.com/lara_vel_dev">Twitter</a></li>
-                    <li><a href="https://www.instagram.com/lara_vel.dev/">Instagram</a></li>
+                    <li><a href="https://www.instagram.com/lara_vel.dev">Instagram</a></li>
                 </ul>    
             </section>
             
@@ -61,7 +61,7 @@
             <section class="box">
                 <h2>
                     <i class="fa fa-briefcase" aria-hidden="true"></i>
-                    Experiencias
+                    Experiencia
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
